# lsgpu

./: .SRCINFO  PKGBUILD  README.md  game_dino.py  game_roulette.py  game_snake.py  game_wordle.py  lsgpu.py  pyproject.toml  spotify.py
entities/: __init__.py  arch.py  base.py  bible_quote.py  bill_100.py  crab.py  debian.py  dvd.py  empty_wallet.py  ethereum.py  fedora.py  ghost.py  gorilla.py  grim_reaper.py  jesus.py  jewish_star.py  maui.py  nuke.py  nvidia.py  rxknephew.py  scrooge.py  shadow_wizard.py  ship.py  slot_machine.py  stuffed_wallet.py  trophy.py  tux.py  ufo.py
src/gpufetch/: __init__.py  __main__.py  ansi.py  debt.py  eightball.py  game_blackjack.py  game_dino.py  game_roulette.py  game_snake.py  game_wordle.py  main.py  sysinfo.py  tickers.py  weather.py
src/gpufetch/entities/: anime_girl.py  arch.py  base.py  bible_quote.py  bill_100.py  crab.py  debian.py  dvd.py  empty_wallet.py  ethereum.py  fedora.py  ghost.py  gorilla.py  greeting.py  grim_reaper.py  jesus.py  jewish_star.py  marge.py  maui.py  nuke.py  nvidia.py  rxknephew.py  scrooge.py  shadow_wizard.py  ship.py  slot_machine.py  stuffed_wallet.py  trophy.py  tux.py  ufo.py
src/gpufetch/themes/: __init__.py  america.py  base.py  canada.py  israel.py  matrix.py  rainbow.py
themes/: america.py  base.py  canada.py  china.py  christmas.py  four_twenty.py  halloween.py  israel.py  rainbow.py
