[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpufetch"
version = "0.2.0"
description = "A minimal GPU monitor for your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
gpufetch = "gpufetch.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpufetch"]
